[package]
name = "aes_crypt"
version = "0.1.0"
authors = ["Adrian White <snarkyboojum@gmail.com>"]
edition = "2018"

[features]
# conditional compilation - do we build with AES native instruction support?
aes-ni = []

[dependencies]

[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "cipher_benchmark"
harness = false
